--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="container text-center d-flex flex-column justify-content-start py-5 quixote">
       <div class="row d-flex flex-column align-items-center">
         <div class="col-md-8 ms-md-5"></div>
-        <h2 class="titulo">DON QUIXOTE</h2>
+        <h2 class="titulo">Don Quixote</h2>
         <div class="col-md-8 mx-auto">
           <p class="descripcion-portada">
             Restaurante DonQuixote se encuentra en pleno corazón de la ciudad de Las Palmas de Gran Canaria.
